added simple chatbot feature using gemini api

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -15,3 +15,7 @@ NODE_ENV=development
 
 # CORS Origins (comma-separated)
 CORS_ORIGINS=http://localhost:4200,https://yourdomain.com
+
+# Gemini API Key
+# Get your free API key from: https://aistudio.google.com/apikey
+GEMINI_API_KEY=your-gemini-api-key-here
