--- a/apps/dashboard/.env.example
+++ b/apps/dashboard/.env.example
@@ -1,4 +1,3 @@
-# API Configuration
-# For development, use: http://localhost:3000/api
-# For production, use: https://api.turbovets.ahmedammar.dev/api
-API_URL=http://localhost:3000/api
+# Frontend environment variables
+# The frontend only needs to know the backend API URL
+# All API keys are stored in the backend for security
