--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "devDependencies": {
     "@types/node": "^20.10.0",
     "typescript": "^5.3.0"
+  },
+  "dependencies": {
+    "claude": "^0.1.1"
   }
 }
